--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="O5iQsp2MZ8FP7_t1IzvoZ8Qw1F8yK-h1iDZXsLEiFEg" />
   <link rel="shortcut icon" href="assets/to-do-list.png" />
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet"
