--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta author="Danilo Medeiros">
-  <meta description="Eu sou a sua lista de afazeres! "
+  <meta name="description" content="Eu sou a lista de afazeres e estou aqui para te ajudar!😁"
   <meta name="google-site-verification" content="O5iQsp2MZ8FP7_t1IzvoZ8Qw1F8yK-h1iDZXsLEiFEg" />
   <link rel="shortcut icon" href="assets/to-do-list.png" />
   <link rel="stylesheet" href="css/main.css" />
